--- a/06_Data Type - Arrays/index.html
+++ b/06_Data Type - Arrays/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./4.5-leap year/4.5-leap year.js"></script>
+  <script src="./6.5-fun_with_arrays/6.5-fun_with_arrays.js"></script>
 </body>
 </html>
