--- a/07_Data Type - Objects/index.html
+++ b/07_Data Type - Objects/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./6.5-fun_with_arrays/6.5-fun_with_arrays.js"></script>
+  <script src="./7.6-object_iteration/7.6-object_iteration.js"></script>
 </body>
 </html>
