--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./11_find and filter/11.2-school_methods/11.2-school_methods.js"></script>
+  <script src="./codeWars/rot13.js"></script>
 </body>
 </html>
