--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./15_Scope & Hoisting/15.1-scope_hoisting.js"></script>
+  <script src="./27_ProtoTypes/27.3-own methods/27.3-own methods.js"></script>
 </body>
 </html>
