--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./27_ProtoTypes/27.3-own methods/27.3-own methods.js"></script>
+  <script src="./29_Promises/30.2-promise_chaining/30.2-promise_chaining.js"></script>
 </body>
 </html>
