--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="34_Ajax and CORS/34.1-star_wars.js"></script>
+  <script src="./35_Classes/Classes ex7/index.js"></script>
 </body>
 </html>
