--- a/34_Ajax and CORS/movie app/index.html
+++ b/34_Ajax and CORS/movie app/index.html
@@ -22,7 +22,7 @@
     body{
       height: 100vh;
       width: 100vw;
-      background: url(./img/background.png) center/cover;
+      background: url(./img/background-horizontal-obscure.png) center/cover;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -40,6 +40,7 @@
       width: 100%;
       height: calc(40vh * 0.4);
       background-color: #381d2ace;
+      background-color: #391700c2;
       font-family: 'Limelight', cursive;
       font-family: 'Notable', sans-serif;
       font-family: 'Megrim', cursive;
@@ -105,13 +106,13 @@
     }
     .movie-displayer .poster{
       height: 100%;
-      width: calc(40vh * 0.7);
+      width: calc(60vh * 0.6);
       background: url()
       no-repeat center center/cover;
       display: inline-block;
     }
     .movie-displayer .data{
-      width: calc(calc(100% - calc(50vh * 0.7)) - 1%);
+      width: calc(calc(100% - calc(60vh * 0.6)) - 2%);
       height: 100%;
       padding: 3% 0;
       display: inline-block;
